Fixed the thoughts viz getting cut off regardless of screen size. [Finishes:#84524186]

--- a/app/assets/stylesheets/think_feel_do_engine/charts_and_viz.css.scss
+++ b/app/assets/stylesheets/think_feel_do_engine/charts_and_viz.css.scss
@@ -90,10 +90,7 @@
 }
 */
 /***[Thought Visualization]***/
-div#ThoughtVizContainer { width:100%; min-height:100px; height:100%; max-height:500px; overflow: hidden;}
-
-
-.tool-content div#ThoughtVizContainer { background-color:red; max-height:1000px;}
+div#ThoughtVizContainer { width:100%; min-height:100px; height:100%; max-height:768px; overflow: hidden;}
 
 .viz-clickable { cursor: pointer;}
 
